--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ maven_group=net.conczin
 architectury_version=${ARCHITECTURY_API_VERSION}
 
 fabric_loader_version=0.15.7
-fabric_api_version=0.77.0+1.19.2
+fabric_api_version=0.77.0
 
-forge_version=1.19.2-43.3.8
+forge_version=43.3.0
 
-immersive_aircraft_version=0.7.1
+immersive_aircraft_version=0.7.5
