added dependency and changelog

--- a/forge/mods.toml
+++ b/forge/mods.toml
@@ -26,3 +26,10 @@ mandatory = true
 versionRange = "[@LOADER_MAJOR@,)"
 ordering = "NONE"
 side = "BOTH"
+
+[[dependencies.man_of_many_planes]]
+modId = "immersive_aircraft"
+mandatory = true
+versionRange = "[0.7.5,)"
+ordering = "NONE"
+side = "BOTH"
