--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -26,3 +26,10 @@ mandatory = true
 versionRange = "[43,)"
 ordering = "NONE"
 side = "BOTH"
+
+[[dependencies.man_of_many_planes]]
+modId = "immersive_aircraft"
+mandatory = true
+versionRange = "[0.7.5,)"
+ordering = "NONE"
+side = "BOTH"
