--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,8 +5,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      MODRINTH_TOKEN: ${{ secrets.MR_API_TOKEN }}
-      CURSEFORGE_TOKEN: ${{ secrets.CF_API_TOKEN }}
+      MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+      CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout Commit
