--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.1-SNAPSHOT" apply false
+    id "dev.architectury.loom" version "1.5-SNAPSHOT" apply false
 }
 
 architectury {
@@ -52,6 +52,10 @@ allprojects {
         maven { url = "https://dvs1.progwml6.com/files/maven/" }
         maven { url "<https://maven.shedaniel.me/>" }
         maven { url "<https://maven.architectury.dev/>" }
+        maven { url = 'https://maven.parchmentmc.org' }
+        maven { url "https://nexus.resourcefulbees.com/repository/maven-public/" }
+        maven { url "https://maven.teamresourceful.com/repository/maven-public/" }
+        maven { url "https://cursemaven.com" }
     }
 
     tasks.withType(JavaCompile) {
